clean up & dockerize pdf generator, add a script to add visitors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,18 @@ services:
             - ./env
         volumes:
             - ./fr1ckets/csv:/csv
+    pdfgenerator:
+        build:
+            context: ./fr1ckets
+            dockerfile: Dockerfile.pdfs
+        links:
+            - db:db
+        env_file:
+            - ./env
+        command: /bin/true
+        volumes:
+            - ./fr1ckets/pdf:/pdf
+            - ./fr1ckets/src:/src
     worker:
         build: ./worker
         links:
