historical commit; lock MySQL to 5, at the time 8 had a broken db backup restore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         links:
             - fr1ckets:fr1ckets
     db:
-        image: mysql
+        image: mysql:5
         volumes:
             - ./db/contents:/var/lib/mysql
             - ./db/backups:/backups
