--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     web:
         image: nginx
         ports:
-            - 8002:80
+            - "127.0.0.1:${PORT}:80"
         volumes:
             - ./web/default.conf:/etc/nginx/conf.d/default.conf:ro
             - ./web/cert.pem:/cert.pem:ro
