--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     db:
         image: mysql:5
         volumes:
-            - ./db/contents:/var/lib/mysql
+            - db_contents:/var/lib/mysql
             - ./db/backups:/backups
             - ./db/entrypoint:/docker-entrypoint-initdb.d:ro
         command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
@@ -50,3 +50,6 @@ services:
             - queue:queue
         env_file:
             - ./env
+
+volumes:
+    db_contents:
